--- a/src/main/resources/templates/jobposts/index.html
+++ b/src/main/resources/templates/jobposts/index.html
@@ -1,52 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Group Project</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-<div class = "container">
-  <h1 class = "text-center my-4"> Welcome to our project </h1>
-  <table class="table">
-    <thead>
-    <tr>
-      <th>ID</th>
-      <th>Contact Info</th>
-      <th>Created At</th>
-      <th>Description</th>
-      <th>Title</th>
-      <th>Position</th>
-      <th>Requirements</th>
-      <th>Salary Range</th>
-      <th>Start Date</th>
-      <th>Employment Type</th>
-      <th>Tags</th>
-      <th>Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="jobpost : ${jobPosts}">
-      <td th:text="${jobpost.id}"></td>
-      <td th:text="${jobpost.contactInformation}"></td>
-      <td th:text="${jobpost.createdAt}"></td>
-      <td th:text="${jobpost.jobDescription}"></td>
-      <td th:text="${jobpost.jobTitle}"></td>
-      <td th:text="${jobpost.position}"></td>
-      <td th:text="${jobpost.requirements}"></td>
-      <td th:text="${jobpost.salaryRange}"></td>
-      <td th:text="${jobpost.startDate}"></td>
-      <td th:text="${jobpost.typeOfEmployment}"></td>
-      <td th:text="${jobpost.tags}"></td>
-<!--      <td style="white-space: nowrap">-->
-<!--        <a class="btn btn-primary btn-sm" th:href="@{/courses/edit(id=${course.id})}">Edit</a>-->
-<!--        <a class="btn btn-primary btn-sm" th:href="@{/courses/delete(id=${course.id})}" onclick="return confirm('Are you sure you want to delete this course?');">Delete</a>-->
-<!--      </td>-->
-    </tr>
-    </tbody>
-  </table>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Group Project</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <style>
+    th,
+    td {
+      border: 1px solid black;
+      border-radius: 10px;
+    }
+    thead {
+  background-color: #333;
+  color: white;
+}
+  </style>
+  <body>
+    <div class="container">
+      <h1 class="text-center my-4">Welcome to our project</h1>
+      <a
+        class="btn btn-primary mb-3"
+        href="create.html"
+        style="text-align: center"
+        >Add</a
+      >
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Contact Info</th>
+            <th>Created At</th>
+            <th>Description</th>
+            <th>Title</th>
+            <th>Position</th>
+            <th>Requirements</th>
+            <th>Salary Range</th>
+            <th>Start Date</th>
+            <th>Employment Type</th>
+            <th>Tags</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="job post : ${jobposts}">
+            <td th:text="${job post.id}"></td>
+            <td th:text="${job post.contact_information}"></td>
+            <td th:text="${job post.created_at}"></td>
+            <td th:text="${job post.job_description}"></td>
+            <td th:text="${job post.job_title}"></td>
+            <td th:text="${job post.position}"></td>
+            <td th:text="${job post.requirements}"></td>
+            <td th:text="${job post.salary_range}"></td>
+            <td th:text="${job post.start_date}"></td>
+            <td th:text="${job post.type_of_employment}"></td>
+            <td th:text="${job post.tags}"></td>
+            <td style="white-space: nowrap">
+              <a
+                href="edit.html"
+                class="btn btn-primary btn-sm"
+                th:href="@{/courses/edit(id=${course.id})}"
+                >Edit</a
+              >
+              <a
+                class="btn btn-primary btn-sm"
+                th:href="@{/courses/delete(id=${course.id})}"
+                onclick="return confirm('Are you sure you want to delete this course?');"
+                >Delete</a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
